Separate setup and build

--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -26,7 +26,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Setup with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: setup --stacktrace
+
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: setup build --stacktrace
+          arguments: build --stacktrace
