--- a/settings.gradle
+++ b/settings.gradle
@@ -3,18 +3,11 @@ pluginManagement {
         gradlePluginPortal()
         mavenLocal()
         maven { url = 'https://maven.neoforged.net/releases' }
-        maven {
-            name = "Technici4n"
-            url = "https://raw.githubusercontent.com/Technici4n/Technici4n-maven/master/"
-//            content {
-//                includeGroup "net.neoforged.gradle"
-//            }
-        }
     }
 }
 
 plugins {
-    id 'net.neoforged.gradle.platform' version '7.0.5+asset-redownload'
+    id 'net.neoforged.gradle.platform' version '7.0.7'
 }
 
 rootProject.name = rootDir.name
