--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       version_labels: -beta, -stable
 
     # We only publish the main repository. This way we avoid publishing Kits
-    if: ${{ github.repository == 'neoforged/NeoForge' }}
+    #if: ${{ github.repository == 'neoforged/NeoForge' }}
     secrets:
       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       MAVEN_USER: ${{ secrets.MAVEN_USER }}
