[WIP] Switch to custom neodev plugin based on moddev

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ import java.util.regex.Pattern
 
 plugins {
     id 'net.neoforged.gradleutils' version '3.0.0'
+    id 'net.neoforged.neodev'
     id 'com.diffplug.spotless' version '6.22.0' apply false
     id 'net.neoforged.licenser' version '0.7.2'
     id 'neoforge.formatting-conventions'
@@ -26,16 +27,28 @@ allprojects {
     repositories {
         mavenLocal()
     }
-}
 
-subprojects {
     apply plugin: 'java'
 
     java.toolchain.languageVersion.set(JavaLanguageVersion.of(project.java_version))
+
+    apply plugin: 'net.neoforged.neodev'
 }
 
 repositories {
     mavenCentral()
+}
+
+// Remove src/ sources from the root project. They are used in the neoforge subproject.
+sourceSets {
+    main {
+        java {
+            srcDirs = []
+        }
+        resources {
+            srcDirs = []
+        }
+    }
 }
 
 // Put licenser here otherwise it tries to license all source sets including decompiled MC sources
